@@ -113,4 +113,10 @@ MSG
     assert_nothing_raised { @scm.checkout(@actor) }
     assert_equal ["chocolatebrownies\n"], @actor.channels.last.sent_data
   end
+
+  def test_checkout_needs_alternative_ssh_password
+    @actor.story = [[:out, "someone's password: "]]
+    assert_nothing_raised { @scm.checkout(@actor) }
+    assert_equal ["chocolatebrownies\n"], @actor.channels.last.sent_data
+  end
 end
